Fix missing data set

--- a/tutorial_10/references.bib
+++ b/tutorial_10/references.bib
@@ -1,50 +1,7 @@
-@article{landsteiner1901agglutination,
-  title={Agglutination phenomena in normal human blood},
-  author={Landsteiner, Karl},
-  journal={Wien Klin Wochenschr},
-  volume={14},
-  pages={1132--4},
-  year={1901}
+@article{baden2020efficacy,
+  title={Efficacy and safety of the {mRNA}-1273 {SARS-CoV-2} vaccine},
+  author={Baden, Lindsey R and El Sahly, Hana M and Essink, Brandon and Kotloff, Karen and Frey, Sharon and Novak, Rick and Diemert, David and Spector, Stephen A and Rouphael, Nadine and Creech, C Buddy and others},
+  journal={New England journal of medicine},
+  year={2020},
+  publisher={Mass Medical Soc}
 }
-@article{10.1093/genetics/155.3.995,
-    author = {Owen, Ray},
-    title = "{Karl Landsteiner and the First Human Marker Locus}",
-    journal = {Genetics},
-    volume = {155},
-    number = {3},
-    pages = {995-998},
-    year = {2000},
-    month = {07},
-    abstract = "{JUST a century ago, the year of the rediscovery of Mendelism, Karl Landsteiner published a short note on what we would now call antibody action in human blood serum, with a comment on the agglutination of the red cells of some people by the serum of others (Landsteiner 1900). The following year he elaborated the observation (Landsteiner 1901), and it is to that second short paper that reference is most appropriately made when dating the discovery of the normal human blood groups. As strict constructionists of the millennium would argue, the century began in 1901, not 1900.Landsteiner outlined the background of this discovery in his 1930 Nobel Lecture (Landsteiner 1931), and it has been dealt with in detail in the Obituary Notices of Fellows of the Royal Society (Rous 1947) and the Biographical Memoirs of the National Academy of Sciences (Heidelberger 1969). Using serological methods, he had been impressed that “the proteins in various animals and plants are different and are specific for each species.” He wondered “whether … individuals within a species show similar … differences. As no observations whatever were available pointing to such behavior, I chose the simplest among the possible plans of investigation … allowing blood serum and red blood corpuscles of different human individuals to interact” (Landsteiner 1931, p. 403).}",
-    issn = {1943-2631},
-    doi = {10.1093/genetics/155.3.995},
-    url = {https://doi.org/10.1093/genetics/155.3.995},
-    eprint = {https://academic.oup.com/genetics/article-pdf/155/3/995/42028548/genetics0995.pdf},
-}
-@article{FRS2009XOT,
-  title={X. On the criterion that a given system of deviations from the probable in the case of a correlated system of variables is such that it can be reasonably supposed to have arisen from random sampling},
-  author={Karl Pearson F.R.S.},
-  journal={Philosophical Magazine Series 1},
-  year={2009},
-  volume={50},
-  pages={157-175}
-}
-@article{canizalez2018blood,
-  title={Blood groups distribution and gene diversity of the ABO and Rh (D) loci in the Mexican population},
-  author={Canizalez-Rom{\'a}n, Adri{\'a}n and Campos-Romero, Abraham and Castro-S{\'a}nchez, Jos{\'e} A and L{\'o}pez-Mart{\'\i}nez, Mario A and Andrade-Mu{\~n}oz, Francisco J and Cruz-Zamudio, Cinthia K and Ort{\'\i}z-Espinoza, Tania G and Le{\'o}n-Sicairos, Nidia and Gaudr{\'o}n Llanos, Alma M and Vel{\'a}zquez-Rom{\'a}n, Jorge and others},
-  journal={BioMed research international},
-  volume={2018},
-  year={2018},
-  publisher={Hindawi}
-}
-@article{segurel2012abo,
-  title={The ABO blood group is a trans-species polymorphism in primates},
-  author={S{\'e}gurel, Laure and Thompson, Emma E and Flutre, Timoth{\'e}e and Lovstad, Jessica and Venkat, Aarti and Margulis, Susan W and Moyse, Jill and Ross, Steve and Gamble, Kathryn and Sella, Guy and others},
-  journal={Proceedings of the National Academy of Sciences},
-  volume={109},
-  number={45},
-  pages={18493--18498},
-  year={2012},
-  publisher={National Acad Sciences}
-}
-
